# LuxEngine

./: .gitignore  .gitmodules  CMakeLists.txt  LuxConfig.h.in  LuxEngineDevConfig.cmake  export.txt  lux_todo2.txt  lux_todo3.txt
data/: builtinFont.lxf
doc/: doc.doxyfile
inc/: Lux.h  LuxConfig.h  LuxConfig.h.in  StrippedD3D9.h  StrippedD3D9X.h  StrippedWindows.h
inc/LuxEngine/: LuxAppContext.h  LuxDevice.h  LuxSystemInfo.h
inc/core/: Attributes.h  BasicHashSet.h  Clock.h  Core.h  DateAndTime.h  EnumClassFlags.h  FixedArray.h  HelperMacros.h  HelperTemplates.h  Logger.h  Logic.h  LuxBase.h  ModuleFactory.h  ParamPackage.h  Referable.h  ReferableFactory.h  ReferenceCounted.h  Resource.h  ResourceLoader.h  ResourceSystem.h  ResourceWriter.h  Result.h  SafeCast.h  StringBuffer.h  StringConverter.h  Timer.h  VariableAccess.h  lxActions.h  lxAlgorithm.h  lxAllocator.h  lxArray.h  lxAssert.h  lxBinary.h  lxCharacter.h  lxDeque.h  lxEnumSet.h  lxEvent.h  lxException.h  lxFormat.h  lxGUID.h  (+29 more)
inc/events/: lxActions.h  lxEvent.h  lxSignal.h
inc/format/: Context.h  ConvInternal.h  Converters.h  ConvertersHelper.h  ConvertersStd.h  Exception.h  Format.h  Format.inl  FormatConfig.h  FormatLocale.h  FormatMagicTemplates.h  FormatMemory.h  GeneralParsing.h  Placeholder.h  RAII.h  Sink.h  Slice.h  StringBasics.h  StringType.h  UnicodeConversion.h  formatmemoryfwd.h
inc/gui/: Cursor.h  CursorControl.h  Font.h  FontCreator.h  GUIAlign.h  GUIElement.h  GUIEnums.h  GUIEnvironment.h  GUIEvent.h  GUIPalette.h  GUIRenderer.h  GUIScalarDistance.h  GUISkin.h  GUITextContainer.h  Window.h
inc/input/: EventReceiver.h  InputDevice.h  InputEvent.h  InputReceiver.h  InputSystem.h  Keycodes.h
inc/io/: Archive.h  ArchiveLoader.h  ArchiveQueue.h  File.h  FileSystem.h  FileUtilities.h  INIFile.h  Path.h  ioConstants.h  ioExceptions.h  path.h
inc/logic/: Logic.h
inc/math/: AABBox.h  Angle.h  CollisionHelper.h  Curve.h  CurveInterpolation.h  Dimension2.h  DualQuaternion.h  FreeMathFunctions.h  Line3.h  Matrix4.h  PixelTransformation.h  Plane.h  Quaternion.h  Rect.h  Transformation.h  Triangle3.h  Vector2.h  Vector3.h  ViewFrustum.h  aabbox3d.h  angle.h  curve.h  dimension2d.h  line3d.h  lxMath.h  lxMathPrinter.h  matrix4.h  plane3d.h  quaternion.h  rect.h  triangle3d.h  vector2.h  vector3.h
inc/platform/: D3D9Exception.h  StrippedD3D9.h  StrippedD3D9X.h  StrippedWindows.h  UnknownRefCounted.h  Win32Exception.h  WindowsUtils.h
inc/resources/: Referable.h  ReferableFactory.h  Resource.h  ResourceLoader.h  ResourceSystem.h  ResourceWriter.h  lxID.h
inc/scene/: Animation.h  Collider.h  Component.h  Curve.h  Node.h  Query.h  Renderable.h  Scene.h  SceneBuilder.h  SceneManager.h  SceneNode.h  SceneNodeComponent.h  SceneRenderer.h  SceneRendererData.h  Transformable.h  Zone.h
inc/serial/: BinarySerializer.h  SerialStructure.h  Serializable.h  Serializer.h  StructuralTable.h
inc/video/: AbstractMaterial.h  AdapterInfo.h  AdapterInformation.cpp  AlphaSettings.h  BaseTexture.h  Canvas3D.h  Color.h  ColorConverter.h  ColorFloat.h  ColorFormat.def  ColorFormat.h  ColorInt.h  ColorSpaces.h  CubeTexture.h  DeviceState.h  DrawingCanvas.h  DriverConfig.h  DriverType.h  EDriverCaps.h  EDriverType.h  EPrimitiveType.h  EShaderTypes.h  FixedFunctionShader.h  FogData.h  HardwareBuffer.h  HardwareBufferConstants.h  HardwareBufferManager.h  IndexBuffer.h  InternalColorList.h  LightData.h  Material.h  MaterialLayer.h  MaterialLibrary.h  MaterialRenderer.h  Pass.h  PipelineSettings.h  Referable.h  RenderSettings.h  RenderStatistics.h  RenderTarget.h  (+16 more)
scripts/: GenerateDef.bat  ValidateDependencies.bat
src/: Win32Exception.h
src/LuxEngine/: DllMainWin32.cpp  DllMainWin32.h  LuxDeviceLinux.cpp  LuxDeviceLinux.h  LuxDeviceNull.cpp  LuxDeviceNull.h  LuxDeviceWin32.cpp  LuxDeviceWin32.h  LuxSystemInfoWin32.h  LuxValidate.cpp  Win32Exception.h
src/UnitTests/: UnitTest.cpp  UnitTest.h  main.cpp
src/core/: Clock.cpp  Logger.cpp  ModuleFactory.cpp  ModuleFactoryRegister.cpp  ModuleFactoryRegister.h  ParamPackage.cpp  Referable.cpp  ReferableFactory.cpp  ReferableFactoryImpl.cpp  ReferableFactoryImpl.h  ReferableRegister.h  ReferenceCounted.cpp  ResourceSystem.cpp  StringConverter.cpp  TimerWin32.cpp  TimerWin32.h  lxActions.cpp  lxArray.cpp  lxAssert.cpp  lxGUID.cpp  lxID.cpp  lxMemoryAlloc.cpp  lxName.cpp  lxSTDIO.cpp  lxString.cpp  lxStringView.cpp  lxStringtable.cpp  lxTypes.cpp  lxUnicode.cpp  lxUnicodeConversion.cpp
src/events/: lxActions.cpp
src/format/: Context.cpp  ConvInternal.cpp  Converters.cpp  ConvertersHelper.cpp  ConvertersStd.cpp  Format.cpp  FormatLocale.cpp  GeneralParsing.cpp
src/gui/: BuiltInFont.h  CursorControlWin32.cpp  CursorControlWin32.h  CursorLux.h  CursorWin32.cpp  CursorWin32.h  FontCreator.cpp  FontCreatorNull.cpp  FontCreatorNull.h  FontCreatorWin32.cpp  FontCreatorWin32.h  FontFormat.cpp  FontFormat.h  FontImpl.cpp  FontImpl.h  FontLoader.cpp  FontLoader.h  FontRaster.cpp  FontRaster.h  GUIElement.cpp  GUIEnvironment.cpp  GUIEnvironmentImpl.cpp  GUIEnvironmentImpl.h  GUIRenderer.cpp  GUISkin.cpp  GUITextContainer.cpp  TTFParser.h  WindowBase.h  WindowWin32.cpp  WindowWin32.h
src/input/: InputDevice.cpp  InputDeviceJoystick.cpp  InputDeviceJoystick.h  InputDeviceKeyboard.cpp  InputDeviceKeyboard.h  InputDeviceMouse.cpp  InputDeviceMouse.h  InputDeviceNull.cpp  InputDeviceNull.h  InputEvent.cpp  InputSystem.cpp  InputSystemImpl.cpp  InputSystemImpl.h  RawInputDevice.cpp  RawInputDevice.h  RawInputDeviceJoystick.cpp  RawInputDeviceJoystick.h  (+6 more)
testing/MaterialTest/: CMakeLists.txt
testing/MaterialTest/src/: Context.h  main.cpp
testing/UnitTest/: CMakeLists.txt
testing/UnitTest/src/: UnitTest.cpp  UnitTest.h  UnitTestEx.cpp  UnitTestEx.h  main.cpp  stdafx.h
testing/UnitTest/src/Tests/: AlgorithmTest.cpp  ArrayTest.cpp  ColorTest.cpp  DequeTest.cpp  FileSystemTest.cpp  FormatTest.cpp  GeneralCoreTest.cpp  HashMapTest.cpp  MatrixTest.cpp  ParamPackageTest.cpp  PathTest.cpp  QuaternionTest.cpp  StringConverterTest.cpp  StringTest.cpp  TransformationTest.cpp  UTF8Test.cpp
(+388 files in other folders)
